# verifiers

./: .gitignore
environments/instruction_following/: pt_instructions.py  pyproject.toml  vf_pt_instruction_following.py
environments/wordle/: pyproject.toml
examples/grpo/: train_wordle.py
